<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CropJob" Id="{0bf24d49-d56f-46f3-b5f3-7c0408356518}">
    <Declaration><![CDATA[TYPE ST_CropJob :
STRUCT
	crop_id : INT;
	datetime_completed : DATE;
	datetime_required : DATE;
	job_id : INT;
	job_status : INT;
	job_type : INT;
	level : INT;
	stack : INT;
	crop : ST_Crop;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>