<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_HVAC" Id="{8c568ee7-1b9e-4138-b5f2-b84799d4659e}">
    <Declaration><![CDATA[TYPE ST_HVAC :
STRUCT
	Power: BOOL;
	Setpoint: REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>